@@ -1,3 +1,33 @@
 = Mokio
 
-This project rocks and uses GNU AGPLv3. (http://www.gnu.org/licenses/agpl-3.0.html)
+<h2>Licence</h2>
+
+GNU AGPLv3: http://www.gnu.org/licenses/agpl-3.0.html
+
+<h2>Description</h2>
+
+    Mokio is a Content Management System that allows creation of
+    sophisticated websites. It consists maily of administration panel for your
+    desired website.
+    It provides the following types of content: Article (piece of text with
+    pictures, lists, links, etc.), Picture Gallery (easily managed article with
+    a number of photos - thumbs and edition provided), Movie Gallery
+    (article with links to Dailymotion, Vimeo and Youtube movies - thumbs
+    and edition provided), Contact Page with Google map and contact form.
+
+    Apart from content it is possible to manage menu structure of your
+    website for each language and defined position (part of the screen).
+
+    If this is not enough for what you need, you can also include pieces of
+    HTML code that should be shared by some (or all) subpages - called
+    HTML Blocks. You can define on which part of the page, these blocks
+    should be displayed.
+    Mokio provides also administration panel for javascripts, languages
+    and backend users.
+
+    Beside Mokio itself, there are various gems dedicated for Mokio, that
+    extends its core functionality.
+
+<h2>Tutorials, documentation & useful tips</h2>
+
+See http://www.mokio.org/support
