@@ -141,7 +141,7 @@ Mokio <add_release_date> v0.0.7
     5. Prevent renderer from crash when can't find html element
     6. Add / change some translations
     7. Change "Users" to "Admins"
-    8. Fixes in breadcrumbs and form for password change
+    8. Fixes in breadcrumbs and form for user password change
     9. Add invalid password error message
     10. Clean up the mess in translations
     11. Reorganization of menu
@@ -149,3 +149,5 @@ Mokio <add_release_date> v0.0.7
     13. Add helper to create sidebar buttons (sidebar_btn)
     14. Add translation helper for sidebar buttons (bts)
     15. Rebuilding language management
+    16. Improved movie gallery
+    17. New README
